bug: Resolved errors when viewing on mobile
This commit addresses the misalignment of certain elements on the page
by readjusting the fluid containers. Some changes were also made to
the expertise descriptions.

Prior to this commit, some elements were laying off the viewport
and causing alignment issues with the whole page. This is no longer
an issue now that I placed them inside fluid containers.

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,9 +93,8 @@ section {
 #logo {
     max-height: 48px;
 }
-
 .navbar-default {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .7);
     border-color: rgba(34, 34, 34, 0.05);
     font-family: 'Lato', Arial, sans-serif;
     -webkit-transition: all 0.35s;
@@ -105,15 +104,10 @@ section {
     -moz-box-shadow: 0px 1px 20px 0px rgba(46, 61, 73, 0.2);
     box-shadow: 0px 1px 20px 0px rgba(46, 61, 73, 0.2);
 }
-.navbar-default .navbar-header .navbar-brand {
-    color: #4e6a14;
-    font-family: 'Lato', Arial, sans-serif;
-    font-weight: 700;
-}
 .navbar-default .navbar-header .navbar-toggle {
     font-weight: 100;
     font-size: 16px;
-    color: #4e6a14;
+    color: #6e9a34;
     border: none;
 }
 .navbar-default .navbar-header .navbar-toggle i {
@@ -123,15 +117,15 @@ section {
 .navbar-default .nav > li > a:focus {
     font-weight: 300;
     font-size: 13px;
-    color: #4e6a14;
+    color: #6e9a34;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-    color: #4e6a14;
+    color: #6e9a34;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-    color: #4e6a14 !important;
+    color: #6e9a34 !important;
     background-color: transparent;
     font-weight: 700;
 }
@@ -144,7 +138,7 @@ section {
         padding: 50px;
     }
     .navbar-default {
-        background-color: transparent;
+        background-color: rgba(255, 255, 255, .5);
         border-color: rgba(255, 255, 255, 0.3);
     }
     .navbar-default .navbar-header .navbar-brand {
@@ -152,7 +146,7 @@ section {
     }
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #4e6a14;
+        color: #6e9a34;
     }
     .navbar-default .nav > li > a,
     .navbar-default .nav > li > a:focus {
@@ -160,7 +154,7 @@ section {
     }
     .navbar-default .nav > li > a:hover,
     .navbar-default .nav > li > a:focus:hover {
-        color: #4e6a14;
+        color: #6e9a34;
     }
     .navbar-default.affix {
         background-color: white;
@@ -172,11 +166,11 @@ section {
     }
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #4e6a14;
+        color: #6e9a34;
     }
     .navbar-default.affix .nav > li > a,
     .navbar-default.affix .nav > li > a:focus {
-        color: #4e6a14;
+        color: #6e9a34;
     }
     .navbar-default.affix .nav > li > a:hover,
     .navbar-default.affix .nav > li > a:focus:hover {
@@ -304,9 +298,16 @@ header .header-content .header-content-inner {
     margin: 20px auto;
 }
 .exp-title {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 500;
     margin-top: 0;
+}
+.exp-quote {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #6e9a34;
 }
 .exp-description {
     font-weight: 300;
@@ -318,6 +319,9 @@ header .header-content .header-content-inner {
     }
     .exp-description {
         font-size: 20px;
+    }
+    .exp-quote {
+        font-size: 30px;
     }
 }
 
@@ -345,9 +349,6 @@ header .header-content .header-content-inner {
     }
     .img-col-right {
         float: right;
-    }
-    .exp-description {
-        font-size: 1.2em;
     }
 }
 /* END EXPERTISE */
@@ -389,14 +390,16 @@ header .header-content .header-content-inner {
     margin-bottom: 60px;
 }
 #project-display h3 {
-    margin-bottom: 40px;
-    margin-top: -15px;
+    margin-bottom: 80px;
+    margin-top: -12px;
     font-weight: 300;
+    font-size: 1.1em;
+    text-shadow: 2px 3px 5px black;
 }
 .projects-box {
     display: block;
     margin: 20px auto;
-    max-width: 550px;
+    max-width: 80%;
     padding: none;
     border: none;
     border-radius: 20px;
@@ -432,7 +435,7 @@ header .header-content .header-content-inner {
 }
 .soc-icon:hover {
     cursor: pointer;
-    color: #4e6a14;
+    color: #6e9a34;
 }
 /* END CONTACT */
 
